--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="index.html#couple">The Couple</a></li>
-						<li class="has-dropdown">
+						<li >
 							<a href="index.html#day">The Day</a>
 						</li>
-						<li class="has-dropdown">
+						<li >
 							<a href="index.html#story">The Story</a>
 						</li>
 						<li><a href="index.html#registry">The Registry</a></li>
@@ -538,7 +538,7 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 
-			<<div class="row copyright">
+			<div class="row copyright">
 				<div class="col-md-12 text-center">
 
 					<p>
