changed hello to help us celebrate our love!

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 					<a name="couple"></a>
-					<h2>Hello!</h2>
+					<h2>Help Us Celebrate Our Love!</h2>
 					<h3>April 14th, 2018 Miami, Florida</h3>
 					<p>We invited you to celebrate our wedding</p>
 				</div>
