--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Kade Treibt</h3>
-						<p>A modern lumberjack.  He was one of five brothers.  So chill that some would say he might melt in the Florida sun.  That would be a small price to pay to be with his Zoey.</p>
+						<p>A modern lumberjack.  He is one of five brothers.  So chill that some would say he might melt in the Florida sun.  That would be a small price to pay to be with his Zoey.</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
