--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					</div>
 					<div class="desc-bride">
 						<h3>Alicia Ficarra</h3>
-						<p>A sea nymph at heart. She was independent and thrived with the sun and beach.  But then she met the man from the north.  He put a piece of ice on her finger and she realized her sun now rose in his eyes.</p>
+						<p>A sea nymph at heart. She was independent and thrives on the beach in the sun.  But then she met the man from the north.  He put a piece of ice on her finger and she realized her sun now rose in his eyes.</p>
 					</div>
 				</div>
 			</div>
