--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Main Ceremony</h3>
+									<h3>The Wedding</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>5:00 PM</span>
@@ -180,7 +180,7 @@
 							</div>
 							<div class="col-md-6 col-sm-6 ">
 
-									<iframe class="animate-box" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.313589479931!2d-80.24296814987126!3d25.72714131622992!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b7cfb157ce31%3A0x6c8a8f0314aace04!2sSonesta+Coconut+Grove!5e0!3m2!1sen!2sus!4v1499714567454" width="400" height="365" frameborder="0" style="border:0" allowfullscreen></iframe>
+									<iframe class="animate-box" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3594.0204918762984!2d-80.23099924987106!3d25.736835915831357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b64a64e3670f%3A0x6521e0457d666daa!2sVilla+Woodbine!5e0!3m2!1sen!2sus!4v1500330122653" width="400" height="365" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 							</div>
 						</div>
