changed event paragraph

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 										<span>Saturday 14</span>
 										<span>April, 2018</span>
 									</div>
-									<p>Walking down the aisle at 5:00 pm, followed by cocktails,dinner and dancing! But dont just come for the wedding, why not make it a vacation in sunny Miami!!</p>
+									<p>Alica will walk down the aisle to the man of her dreams at 5:00 PM.  Following the ceremony will be the cocktail hour, dinner, dancing, and a lifetime of happiness!</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 ">
