--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="index.html#couple">The Couple</a></li>
+						<li><a href="bridesmaids.html">The Girls</a></li>
 						<li >
-							<a href="index.html#day">The Day</a>
+							<a href="groomsmen.html">The Guys</a>
 						</li>
 						<li >
 							<a href="index.html#story">The Story</a>
