--- a/bridesmaids.html
+++ b/bridesmaids.html
@@ -110,7 +110,36 @@
 	</header>
 
 
+	<div id="fh5co-couple" class="fh5co-section-gray">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 
+				</div>
+			</div>
+			<div class="couple-wrap animate-box">
+				<div class="couple-half">
+					<div class="groom">
+						<!--<img src="images/groom.jpg" alt="groom" class="img-responsive">-->
+					</div>
+					<div class="desc-groom">
+						<h3>Alicia Ficarra</h3>
+						<p>Hi there, it's Alicia, or as my fiancé calls me, Zoe...I was born in south Florida on a hot summer afternoon.
+I am the youngest of 3...one brother, one sister. Had a great childhood, but how could you not with amazingly loving parents, I am blessed.
+Between the tree climbing, go karts and Ferris wheel, we were very well entertained. Graduated from FSU then headed down to Miami's South Beach for another great adventure.
+Beach days with my sunshine girl, Bailey Jean; traveling as often as I can (...afford) and anything involving food are a few of the joys in my life.
+Just finishing grad school and moving along in life. I stopped by my sister’s house one weekend, met Mike's two cousins from up north. And then the good life just got a whole lot better...</p>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="fh5co-video fh5co-bg" style="background-image: url(images/IMG_6926.jpg); ">
+
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 	<div id="fh5co-couple-story">
 		<div class="container">
 			<div class="row">
