--- a/groomsmen.html
+++ b/groomsmen.html
@@ -109,7 +109,31 @@
 		</div>
 	</header>
 
+	<div id="fh5co-couple" class="fh5co-section-gray">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
 
+			</div>
+			<div class="couple-wrap animate-box">
+				<div class="couple-half">
+					<div class="groom">
+						<!--<img src="images/groom.jpg" alt="groom" class="img-responsive">-->
+					</div>
+					<div class="desc-groom">
+						<h3>Kade Treibt</h3>
+						<p>Hi – you know me – it’s Kade! I was born at Norwalk Hospital in Connecticut on Dec. 28, 1986; 5:38 PM to be exact.I am the 2nd oldest of 5 boys AND…, I am pretty sure I am my mom’s favorite. My parents are the best. I have 4 fantastic brothers and we are very tight; in spite of the fact that we have nearly killed each other several times! I grew up in Brookfield, CT and From Kindergarten through 8th Grade I went to St. Joseph’s of Brookfield. I made the best friends anyone could ask for.I went to Brookfield High School where I played Football and Baseball.  I was pretty good. Our Football Team was AMAZING, and our fan base is legendary.I held a number of odd jobs; working with animals, making jewelry, elevator installation and repair, etc. But, after going to The Vermont School of Woodworking, I found my passion. Life was good. I Didn’t think it could get any better, but then I took a spontaneous trip down to Florida, and met my Zoe! And it did get better – much better!!</p>
+					</div>
+				</div>
+				<div class="col-md-6 animate-box">
+					<div class="fh5co-video fh5co-bg" style="background-image: url(images/IMG_6927.jpg); ">
+
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<div id="fh5co-couple-story">
 		<div class="container">
