--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<a name="couple"></a>
 					<h2>Help Us Celebrate Our Love!</h2>
 					<h3>April 14th, 2018 Miami, Florida</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<p>We invite you to celebrate our wedding</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
