--- a/bridesmaids.html
+++ b/bridesmaids.html
@@ -124,8 +124,8 @@
 					</div>
 					<div class="desc-groom">
 						<h3>Alicia Ficarra</h3>
-						<p>Hi there, it's Alicia, or as my fiancé calls me, Zoe...I was born in south Florida on a hot summer afternoon.
-I am the youngest of 3...one brother, one sister. Had a great childhood, but how could you not with amazingly loving parents, I am blessed.
+						<p>Hi there, it's Alicia, or as my fiancé calls me, Zoey...I was born in south Florida on a hot summer afternoon.
+I am the youngest of 3...one brother, one sister. Had a great childhood, but how could you not with amazingly loving parents; I am blessed.
 Between the tree climbing, go karts and Ferris wheel, we were very well entertained. Graduated from FSU then headed down to Miami's South Beach for another great adventure.
 Beach days with my sunshine girl, Bailey Jean; traveling as often as I can (...afford) and anything involving food are a few of the joys in my life.
 Just finishing grad school and moving along in life. I stopped by my sister’s house one weekend, met Mike's two cousins from up north. And then the good life just got a whole lot better...</p>
