added Erin to bridesmaids

--- a/bridesmaids.html
+++ b/bridesmaids.html
@@ -220,11 +220,22 @@ Just finishing grad school and moving along in life. I stopped by my sister’s 
 
 								</div>
 								<div class="timeline-body">
-									<p>horse whisperer and for fun, likes to shot put grapefruits</p>
+									<p>amateur horse whisperer and for fun, likes to shot put grapefruits</p>
 								</div>
 							</div>
 						</li>
+						<li class="animate-box">
+							<div class="timeline-badge" style="background-image:url(images/Bridesmaids/image7.jpg);"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Erin Spaulding</h3>
 
+								</div>
+								<div class="timeline-body">
+									<p>She will make you buy a nickel for a dollar!</p>
+								</div>
+							</div>
+						</li>
 			    	</ul>
 				</div>
 			</div>
