added registry logos

--- a/index.html
+++ b/index.html
@@ -184,9 +184,12 @@
 
 							</div>
 						</div>
+						
 					</div>
 				</div>
+				
 			</div>
+			
 		</div>
 	</div>
 
@@ -462,8 +465,16 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 				</div>
 			</div>
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Coming Soon</h2>
+				<div class="col-md-12 text-center">
+
+					<p>
+						<ul class="fh5co-social-icons">
+							<li><a href="#"><img src=images/LOGOS/if_amazon-social-media_765188.png height="80" width="80"></a></li>
+							<li><a href="#"><img src=images/LOGOS/honeyfund.svg height="150" width="150"></a></li>
+							<li><a href="#"><img src=images/LOGOS/bed_bath_and_beyond.svg height="100" width="100"></a></li>
+							<li><a href="#"><img src=images/LOGOS/Pottery_Barn.svg height="300" width="300"></a></li>
+						</ul>
+					</p>
 				</div>
 				<!--<div class="display-t">
 					<div class="display-tc">
