spelling errors and css fix for li

--- a/bridesmaids.html
+++ b/bridesmaids.html
@@ -220,7 +220,7 @@ Just finishing grad school and moving along in life. I stopped by my sister’s 
 
 								</div>
 								<div class="timeline-body">
-									<p>amateur horse whisperer and for fun, likes to shot put grapefruits</p>
+									<p>professional horse whisperer and for fun, likes to shot put grapefruits</p>
 								</div>
 							</div>
 						</li>
