--- a/index.html
+++ b/index.html
@@ -554,11 +554,11 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 									
 									<p>We appreciate you all coming to Miami for our wedding celebrations, but why stop there? Miami is a city full of life! Why not stay a while and check out some of these fun destinations.</p>
 									<ul>
-										<li>BILL BAGGS CAPE & LIGHTHOUSE SOUTH BEACH</li>
-										<li>PEREZ ART MUSEUM </li>
-										<li>RENT A BOAT AND CRUISE TO STILTSVILLE</li>
-										<li>VIZCAYA MUSEUM & GARDENS</li>
-										<li>LINCOLN ROAD MALL</li>
+										<li class="things_to_do">BILL BAGGS CAPE & LIGHTHOUSE SOUTH BEACH</li>
+										<li class="things_to_do">PEREZ ART MUSEUM </li>
+										<li class="things_to_do">RENT A BOAT AND CRUISE TO STILTSVILLE</li>
+										<li class="things_to_do">VIZCAYA MUSEUM & GARDENS</li>
+										<li class="things_to_do">LINCOLN ROAD MALL</li>
 									</ul>
 									<p>And dont forget to book your hotel at the <a href="https://gc.synxis.com/rez.aspx?Hotel=12604&Chain=5157&arrive=4/13/2018&depart=4/15/2018&adult=1&child=0&group=0413FICARR">Sonesta Coconut Grove Hotel!</a></p>
 								</div>
