changed hotel section

--- a/index.html
+++ b/index.html
@@ -559,8 +559,9 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 										<li class="things_to_do">RENT A BOAT AND CRUISE TO STILTSVILLE</li>
 										<li class="things_to_do">VIZCAYA MUSEUM & GARDENS</li>
 										<li class="things_to_do">LINCOLN ROAD MALL</li>
+										<li class="things_to_do">MUCH, MUCH MORE!</li>
 									</ul>
-									<p>And dont forget to book your hotel at the <a href="https://gc.synxis.com/rez.aspx?Hotel=12604&Chain=5157&arrive=4/13/2018&depart=4/15/2018&adult=1&child=0&group=0413FICARR">Sonesta Coconut Grove Hotel!</a></p>
+									<p><a class="hotel_link" href="https://gc.synxis.com/rez.aspx?Hotel=12604&Chain=5157&arrive=4/13/2018&depart=4/15/2018&adult=1&child=0&group=0413FICARR">Here</a> is our group reservation booking link for the discounted block of rooms at The Sonesta of Miami.  Or you could call at 1-800-Sonesta (1-800-766-3782); using group code: 0413FICARR.  The hotel is on the water and just one mile away from the wedding venue.  All reservations must be made by Tuesday, March 13th, 2018. Enjoy your time in sunny Miami!</p>
 								</div>
 								
 							</div>
