--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 										<span>Saturday 14</span>
 										<span>April, 2018</span>
 									</div>
-									<p>Alica will walk down the aisle to the man of her dreams at 5:00 PM.  Following the ceremony will be the cocktail hour, dinner, dancing, and a lifetime of happiness!</p>
+									<p>Alica will walk down the aisle to the man of her dreams at 5:00 PM.  Following the ceremony will be the cocktail hour, dinner, dancing, and a lifetime of happiness! Click <a href="#hotel" class="hotel_link"><b>here</b></a> for information about lodging.</p>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 ">
@@ -538,8 +538,9 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+					
 					<span>Make it a Vacation in</span>
-					<a name="day"></a>
+					<a name="hotel"></a>
 
 					<h2>Miami!</h2>
 				</div>
@@ -561,7 +562,7 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 										<li class="things_to_do">LINCOLN ROAD MALL</li>
 										<li class="things_to_do">MUCH, MUCH MORE!</li>
 									</ul>
-									<p><a class="hotel_link" href="https://gc.synxis.com/rez.aspx?Hotel=12604&Chain=5157&arrive=4/13/2018&depart=4/15/2018&adult=1&child=0&group=0413FICARR">Here</a> is our group reservation booking link for the discounted block of rooms at The Sonesta of Miami.  Or you could call at 1-800-Sonesta (1-800-766-3782); using group code: 0413FICARR.  The hotel is on the water and just one mile away from the wedding venue.  All reservations must be made by Tuesday, March 13th, 2018. Enjoy your time in sunny Miami!</p>
+									<p><a class="hotel_link" href="https://gc.synxis.com/rez.aspx?Hotel=12604&Chain=5157&arrive=4/13/2018&depart=4/15/2018&adult=1&child=0&group=0413FICARR"><b>Here</b></a> is our group reservation booking link for the discounted block of rooms at <a class="hotel_link" href="https://gc.synxis.com/rez.aspx?Hotel=12604&Chain=5157&arrive=4/13/2018&depart=4/15/2018&adult=1&child=0&group=0413FICARR"><b>The Sonesta of Miami</b></a>.  Or you could call at 1-800-Sonesta (1-800-766-3782); using group code: 0413FICARR.  The hotel is on the water and just one mile away from the wedding venue.  All reservations must be made by Tuesday, March 13th, 2018. Enjoy your time in sunny Miami!</p>
 								</div>
 								
 							</div>
