--- a/index.html
+++ b/index.html
@@ -469,10 +469,10 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><img src=images/LOGOS/if_amazon-social-media_765188.png height="80" width="80"></a></li>
+							
 							<li><a href="#"><img src=images/LOGOS/honeyfund.svg height="150" width="150"></a></li>
-							<li><a href="#"><img src=images/LOGOS/bed_bath_and_beyond.svg height="100" width="100"></a></li>
-							<li><a href="#"><img src=images/LOGOS/Pottery_Barn.svg height="300" width="300"></a></li>
+							<li><a href="https://www.williams-sonoma.com/registry/khz9lst9c7/registry-list.html"><img src=images/LOGOS/logo4.png height="200" width="200"></a></li>
+							<li><a href="https://www.potterybarn.com/registry/ds2k7f7dx7/registry-list.html"><img src=images/LOGOS/Pottery_Barn.svg height="300" width="300"></a></li>
 						</ul>
 					</p>
 				</div>
