--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ Zoe found the Villa Woodbine and knew it was meant to be. She called Kade and sa
 					<p>
 						<ul class="fh5co-social-icons">
 							
-							<li><a href="https://www.honeyfund.com/wedding/Zotronsyeti"><img src=images/LOGOS/honeyfund.svg height="150" width="150"></a></li>
+							<!--<li><a href="https://www.honeyfund.com/wedding/Zotronsyeti"><img src=images/LOGOS/honeyfund.svg height="150" width="150"></a></li>-->
 							<li><a href="https://www.williams-sonoma.com/registry/khz9lst9c7/registry-list.html"><img src=images/LOGOS/logo4.png height="200" width="200"></a></li>
 							<li><a href="https://www.potterybarn.com/registry/ds2k7f7dx7/registry-list.html"><img src=images/LOGOS/Pottery_Barn.svg height="300" width="300"></a></li>
 						</ul>
